--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,1 +1,3 @@
+ERROR_500=System error, please contact administrator.
 ERROR_40001=Signature verification failed.
+ERROR_10002=Signature verification failed(setting error).
